--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             <h1>Hi, I'm Sinay</h1>
             <h2>A Proud Part Of The Eighth Consciousness.</h2>
             <p class="icons">
-              <a target="_blank" href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
-              <a target="_blank" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-              <a target="_blank" href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-              <a target="_blank" href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+              <a target="_blank" href="https://github.com/sinayblumin"><i class="fa fa-github" aria-hidden="true"></i></a>
+              <a target="_blank" href="https://twitter.com/sinayblumin"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+              <a target="_blank" href="https://linkedin.com/sinayblumin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+              <a target="_blank" href="mailto:bluminsinay@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
             </p>
           </div>
         </div>
