--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div id="content">
             <img class="profile" src="images/sinay.png" alt="sinay">
             <h1>Hi, I'm Sinay</h1>
-            <h2>A Proud Part Of The Eighth Consciousness.</h2>
+            <h2>Proud Part Of The Eighth Consciousness</h2>
             <p class="icons">
               <a target="_blank" href="https://github.com/sinayblumin"><i class="fa fa-github" aria-hidden="true"></i></a>
               <a target="_blank" href="https://twitter.com/sinayblumin"><i class="fa fa-twitter" aria-hidden="true"></i></a>
