--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
               <a target="_blank" href="https://github.com/sinayblumin"><i class="fa fa-github" aria-hidden="true"></i></a>
               <a target="_blank" href="https://twitter.com/sinayblumin"><i class="fa fa-twitter" aria-hidden="true"></i></a>
               <a target="_blank" href="https://www.linkedin.com/in/sinayblumin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+              <a target="_blank" href="https://soundcloud.com/sinayblumin"><i class="fa fa-soundcloud" aria-hidden="true"></i></a>
               <a target="_blank" href="mailto:bluminsinay@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
             </p>
           </div>
