--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Sinay Blumin is a Web Developer, Designer and SEO Veteran based in Berlin.">
     <meta name="author" content="Sinay Blumin">
-    <link rel="icon" href="images/favicon/favicon.ico">
+    <link rel="icon" href="../images/favicon/favicon.ico">
     <title>Sinay Blumin</title>
     <link href="https://fonts.googleapis.com/css?family=Inconsolata|Zilla+Slab+Highlight" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/cover.css">
+    <link rel="stylesheet" href="../styles/cover.css">
   </head>
 
   <body>
@@ -46,7 +46,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div id="content">
-            <img class="profile" src="images/sinay.png" alt="sinay">
+            <img class="profile" src="../images/sinay.png" alt="sinay">
             <h1>Hi, I'm Sinay</h1>
             <h2>Proud Part Of The Eighth Consciousness</h2>
             <p class="icons">
