--- a/index.html
+++ b/index.html
@@ -9,65 +9,30 @@
     <meta name="author" content="Sinay Blumin">
     <link rel="icon" href="../images/favicon/favicon.ico">
     <title>Sinay Blumin</title>
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata|Zilla+Slab+Highlight" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata|Bungee+Hairline" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/cover.css">
+    <link rel="stylesheet" href="../styles/2018.css">
   </head>
 
   <body>
 
-    <nav class="navbar navbar-default">
-      <div class="container">
-
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <!-- <a class="navbar-brand" href="#">Sinay Blumin</a> -->
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">About</a></li>
-          </ul>
-
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-
-
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
           <div id="content">
-            <img class="profile" src="../images/sinay.png" alt="sinay">
-            <h1>Hi, I'm Sinay</h1>
-            <h2>Proud Part Of The Eighth Consciousness</h2>
+            <h1>Welcome, Creature!</h1>
+            <h2>My Name Is Sinay And I'm A Proud Part Of The Eighth Consciousness</h2>
+            <p>I Contribute To It With Web Development, Design and SEO.</p>
+            <p>Currently based in Berlin.</p>
             <p class="icons">
               <a target="_blank" href="https://github.com/sinayblumin"><i class="fa fa-github" aria-hidden="true"></i></a>
               <a target="_blank" href="https://twitter.com/sinayblumin"><i class="fa fa-twitter" aria-hidden="true"></i></a>
               <a target="_blank" href="https://www.linkedin.com/in/sinayblumin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
               <a target="_blank" href="https://soundcloud.com/sinayblumin"><i class="fa fa-soundcloud" aria-hidden="true"></i></a>
-              <a target="_blank" href="mailto:bluminsinay@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+              <a target="_blank" href="mailto:bluminsinay[sign-of-at]gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
             </p>
           </div>
-        </div>
-      </div>
-    </div>
 
     <footer class="footer">
-      <div class="container">
-        <p>Berlin 2017</p>
-      </div>
+        <p>Berlin 2018</p>
     </footer>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
