--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
           <div id="content">
             <h1>Welcome, Creature!</h1>
-            <h2>My Name Is Sinay And I'm A Proud Part Of The Eighth Consciousness</h2>
+            <h2>My Name Is Sinay And I'm A Proud Part Of The Eighth Consciousness.</h2>
             <p>I Contribute To It With Web Development, Design and SEO.</p>
-            <p>Currently based in Berlin.</p>
+            <p>Currently based in Berlin. You can pick in <a href="/Sinay_CV_Eng.pdf">my CV</a>.</p>
             <p class="icons">
               <a target="_blank" href="https://github.com/sinayblumin"><i class="fa fa-github" aria-hidden="true"></i></a>
               <a target="_blank" href="https://twitter.com/sinayblumin"><i class="fa fa-twitter" aria-hidden="true"></i></a>
