--- a/index.html
+++ b/index.html
@@ -20,18 +20,16 @@
             <h1>Welcome, Creature!</h1>
             <h2>My Name Is Sinay And I'm A Proud Part Of The Eighth Consciousness.</h2>
             <p>I Contribute To It With Web Development, Design and SEO.</p>
-            <p>Currently based in Berlin. You can pick in <a href="/Sinay_CV_Eng.pdf">my CV</a>.</p>
+            <p>Currently based in Berlin. You can pick in <a href="/Sinay_CV_Eng_2019.pdf">my CV</a>.</p>
             <p class="icons">
               <a target="_blank" href="https://github.com/sinayblumin"><i class="fa fa-github" aria-hidden="true"></i></a>
-              <a target="_blank" href="https://twitter.com/sinayblumin"><i class="fa fa-twitter" aria-hidden="true"></i></a>
               <a target="_blank" href="https://www.linkedin.com/in/sinayblumin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-              <a target="_blank" href="https://soundcloud.com/sinayblumin"><i class="fa fa-soundcloud" aria-hidden="true"></i></a>
               <a target="_blank" href="mailto:bluminsinay[sign-of-at]gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
             </p>
           </div>
 
     <footer class="footer">
-        <p>Berlin 2018</p>
+        <p>2019</p>
     </footer>
 
   </body>
