changed file name

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>Welcome, Creature!</h1>
             <h2>My Name Is Sinay And I'm A Proud Part Of The Eighth Consciousness.</h2>
             <p>I Contribute To It With Web Development, Design and SEO.</p>
-            <p>Currently based in Berlin. You can pick in <a href="/Sinay_CV_Eng_2019.pdf">my CV</a>.</p>
+            <p>Currently based in Berlin. You can pick in <a href="/Resume_Sinay_Eng_2019.pdf">my CV</a>.</p>
             <p class="icons">
               <a target="_blank" href="https://github.com/sinayblumin"><i class="fa fa-github" aria-hidden="true"></i></a>
               <a target="_blank" href="https://www.linkedin.com/in/sinayblumin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
