Fix CSS typos and update asset paths

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Sinay Blumin is a Web Developer, Designer and SEO Veteran based in Berlin.">
     <meta name="author" content="Sinay Blumin">
-    <link rel="icon" href="../images/favicon/favicon.ico">
+    <link rel="icon" href="images/favicon/favicon.ico">
     <title>Sinay Blumin</title>
     <link href="https://fonts.googleapis.com/css?family=Inconsolata|Bungee+Hairline" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/2018.css">
+    <link rel="stylesheet" href="styles/2018.css">
   </head>
 
   <body>
