Update footer year and highlight expertise

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <h1>Welcome, Creature!</h1>
             <h2>My Name Is Sinay And I'm A Proud Part Of The Eighth Consciousness.</h2>
             <p>I Contribute To It With Web Development, Design and SEO.</p>
+            <p>I'm an expert in SEO and ASO, as well as AI Search and AI Chats.</p>
             <p>Currently based in Berlin. You can pick in <a href="/Resume_Sinay_Eng_2019.pdf">my CV</a>.</p>
             <p class="icons">
               <a target="_blank" href="https://github.com/sinayblumin"><i class="fa fa-github" aria-hidden="true"></i></a>
@@ -29,7 +30,7 @@
           </div>
 
     <footer class="footer">
-        <p>2019</p>
+        <p>2025</p>
     </footer>
 
   </body>
